# regressions

./: .gitignore  Cargo.toml  README.md  codegen.py  compiler.py  constraints.py  context.py  games_small.csv  grammar.md  grammer.md  model.py  ops.py  p1.py  parser.py  processor.py  requirements.txt  scanner.py  setup.py  update_grammar.sh  variables.py
.github/workflow/: tests.yml
.github/workflows/: black.yml  docs.yml  (+7 more)
docs/: index.html  rat.html  search.js
rat/: __init__.py  ast.py  build_parser.sh  codegen_backends.py  codegen_backends2.py  compile_inspector.py  compiler.py  compiler2.py  compiler_rewrite.py  constraints.py  exceptions.py  exceptions2.py  fit.py  grammar.ebnf  grammar.py  ir.py  language_server.py  math.py  model.py  model2.py  nuts.py  ops.py  optimizer.py  parser.py  position_and_range.py  sampler.py  scanner.py  subscript_cfg.py  subscript_table.py  symbol_table.py  trace_table.py  types.py  variable_table.py  variables.py  walker.py
src/: lib.rs
test_data_generation/: bernoulli.stan  bernoulli_fit.R  bernoulli_generate.R  eight_schools.csv  eight_schools.stan  eight_schools_fit.R  kalman.csv  kalman.stan  kalman_2.stan  kalman_2_fit.R  kalman_2_generate.R  kalman_fit.R  kalman_generate.R  normal.csv  normal_generate.R  normal_mu  normal_mu.stan  normal_mu_fit.R  normal_mu_sd  normal_mu_sd.stan  normal_mu_sd_fit.R  normal_mu_sigma_fit.R  time_series_2_fit.R  time_series_2_generate.R  time_series_fit.R  time_series_generate.R
tests/: conftest.py  multiple_gradient_benchmark.py  p1.py
vscode-rat-extension/: README.md  package.json
(+83 files in other folders)
